--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,47 @@
-.container {
-  width: auto;
+html {
+  background: rgb(22, 22, 24);
+  font-family: 'helvetica';
+  font-size: 20px;
+  font-weight: 100;
+}
+
+h1 {
+  text-align: center;
+  color: white;
+  font-weight: 200;
+}
+
+.list {
+  margin: 50px auto;
+  max-width: 400px;
+  background: white;
+  border-radius: 5px;
+  box-shadow: 10px 10px rgba(255, 255, 255, 0.1);
+}
+
+.item {
   display: flex;
-  flex-direction: column;
   align-items: center;
+  border-bottom: 1px solid lightgray;
+}
+
+.item:last-child {
+  border-bottom: 0;
+  ;
+}
+
+input:checked+p {
+  background: rgba(0, 0, 0, 0.05);
+  text-decoration: line-through;
+}
+
+input[type="checkbox"] {
+  margin: 20px;
+}
+
+p {
+  margin: 0;
+  padding: 20px;
+  flex: 1;
+  border-left: 1px solid lightgray;
 }
